# yt-dlp-types

./: .readthedocs.yaml  .wiswa.jsonnet  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  README.md  package.json  pyproject.toml
.github/workflows/: qa.yml  tests.yml
docs/: conf.py  index.rst
tests/: conftest.py
tests/pyright/: base.py  test_args.py
typings/: yt_dlp
yt-dlp-stubs/: METADATA.toml  __init__.pyi  cookies.pyi
yt_dlp-stubs/: YoutubeDL.pyi  __init__.pyi  _misc.pyi  aes.pyi  cache.pyi  cookies.pyi  globals.pyi  jsinterp.pyi  minicurses.pyi  options.pyi  plugins.pyi  socks.pyi  update.pyi  webvtt.pyi
yt_dlp-stubs/compat/: __init__.pyi  compat_utils.pyi  imghdr.pyi
yt_dlp-stubs/downloader/: __init__.pyi  bunnycdn.pyi  common.pyi  dash.pyi  external.pyi  f4m.pyi  fc2.pyi  fragment.pyi  hls.pyi  http.pyi  ism.pyi  mhtml.pyi  niconico.pyi  rtmp.pyi  rtsp.pyi  websocket.pyi  youtube_live_chat.pyi
yt_dlp-stubs/extractor/: __init__.pyi  common.pyi  commonmistakes.pyi  commonprotocols.pyi
yt_dlp-stubs/networking/: __init__.pyi  _helper.pyi  common.pyi  exceptions.pyi  impersonate.pyi  websocket.pyi
yt_dlp-stubs/postprocessor/: __init__.pyi  common.pyi
yt_dlp-stubs/utils/: __init__.pyi  _legacy.pyi  _utils.pyi  networking.pyi  progress.pyi  traversal.pyi
