[tool.poetry]
authors = ["Andrew Udvare <audvare@gmail.com>"]
classifiers = ['Typing :: Typed']
description = "Typing stubs for yt-dlp"
license = "MIT"
name = "yt-dlp-types"
packages = [{ include = "yt_dlp-stubs" }]
readme = "README.md"
version = "0.0.5"

[tool.poetry.dependencies]
python = ">=3.10,<4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pylint = "^2.17.4"
pylint-quotes = "^0.2.3"
rope = "^1.9.0"
toml = "^0.10.2"
yapf = "^0.40.1"
yt-dlp = "^2023.6.22"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
